Cart, Django Views, links, pagination, search
Переписал CRUD для товара на классовые представления. Пагинировал товары на главной. Добавил поисковую строку. Написал модельную форму для товара и использовал её в CreateView и UpdateView. Добавил модель "Товар в корзине". На страницах, где выводятся товары сделал кнопку "Add to cart". Написал представление для добавления товара в корзину. Добавил страницу "Cart". Написал представление для удаления товара из корзины

--- a/source/labwork_60/templates/add_product.html
+++ b/source/labwork_60/templates/add_product.html
@@ -7,6 +7,6 @@
 {% endblock %}
 {% block content %}
     <form action="{% url 'add_product' %}" method="post">
-        {% include 'partial/product_form.html' with button_text='Добавить' %}
+        {% include 'partial/product_form.html' with button_text='Create' %}
     </form>
 {% endblock %}
