--- a/source/labwork_60/templates/base.html
+++ b/source/labwork_60/templates/base.html
@@ -12,7 +12,7 @@
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary ps-5">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'index' %}">Красно-белое</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Red&White</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
