--- a/source/labwork_60/templates/product_edit.html
+++ b/source/labwork_60/templates/product_edit.html
@@ -7,6 +7,6 @@
 {% endblock %}
 {% block content %}
     <form action="{% url 'product_edit' product.pk %}" method="post">
-        {% include 'partial/product_form.html' with button_text='Редактировать' %}
+        {% include 'partial/product_form.html' with button_text='Edit' %}
     </form>
 {% endblock %}
