--- a/source/static/css/style.css
+++ b/source/static/css/style.css
@@ -61,3 +61,75 @@ button:hover {
     opacity: 0.8;
     color: white;
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.pagination a, .pagination .page-disabled {
+    display: inline-block;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 3px;
+}
+
+.pagination a {
+    background: #6c757d;
+    color: white;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    background: #565e64;
+    text-decoration: none;
+}
+
+.pagination .page-disabled {
+    background: white;
+    color: #dddddd
+}
+
+.pagination .current-page {
+    display: inline-block;
+}
+
+.pagination .current-page input {
+    width: 50px;
+    padding: 5px 7px;
+    font-size: inherit;
+    border-radius: 5px;
+    text-align: center;
+    border: solid 1px gray;
+}
+
+.current-page {
+    background-color: white;
+}
+
+.search_form {
+    flex-direction: row;
+    background-color: white;
+}
+
+select {
+    background-color: whitesmoke;
+    border: thick double #6c757d;
+    padding: 10px;
+}
+
+.int_input {
+    border: thick double #6c757d;
+    padding: 10px;
+}
+
+.add_to_cart_button {
+    color: #fff;
+    background-color: #6c757d;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+}
