Order, create order, order form
Добавил модель "Заказ". Написал представление для создания заказа. Зарегистрировал заказы в админке. В списке заказов в админке вывел pk, имя, телефон и дату и время создания. В списке заказов в админке отсортировал их по дате и времени создания в убывающем порядке.

--- a/source/labwork_60/templates/cart.html
+++ b/source/labwork_60/templates/cart.html
@@ -24,4 +24,7 @@
         </div>
     {% endfor %}
     <h4>Total: {{ total }}</h4>
+    <form action="{% url "create_order" %}" method="get">
+        {% include 'partial/product_form.html' with button_text='Create Order' %}
+    </form>
 {% endblock %}
