--- a/source/labwork_60/templates/add_product.html
+++ b/source/labwork_60/templates/add_product.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block header %}
-    <h1>Добавить новый продукт</h1>
+    <h1>Add new product</h1>
 {% endblock %}
 {% block title %}
-    Добавить продукт
+    Add product
 {% endblock %}
 {% block content %}
     <form action="{% url 'add_product' %}" method="post">
