--- a/source/labwork_60/templates/product_delete_confirm.html
+++ b/source/labwork_60/templates/product_delete_confirm.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block header %}
-    <h1>Уверены что хотите удалить {{ product.title }}?</h1>
+    <h1>Are you sure you want to delete {{ product.title }}?</h1>
 {% endblock %}
 {% block title %}
     Confirm delete page
